--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "private": true,
   "scripts": {
     "test": "jest",
-    "start": "PORT=5000 node ./bin/www"
+    "start": "PORT=5000 nodemon ./bin/www"
   },
   "jest": {
     "verbose": true
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "mongoose": "^5.12.3",
@@ -19,6 +20,7 @@
   "devDependencies": {
     "dotenv": "^8.2.0",
     "jest": "^26.6.3",
+    "nodemon": "^2.0.13",
     "supertest": "^6.1.3"
   }
 }
